--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,31 @@ project(
     LANGUAGES C
 )
 
+include(CTest)
 #standard C
 set(CMAKE_C_STANDARD 17)
 
 #include directories
 include_directories(include)
+
+
+
+#unity 
+
+include(FetchContent)
+
+set(UNITY_GIT_URL https://github.com/ThrowTheSwitch/Unity.git)
+set(FETCHCONTENT_QUIET OFF)
+
+
+FetchContent_Declare(
+        Unity
+        GIT_REPOSITORY ${UNITY_GIT_URL}
+        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/Unity
+        UPDATE_COMMAND "" # Disable the update command
+)
+
+FetchContent_MakeAvailable(Unity)
 
 #src
 file(GLOB_RECURSE SOURCES "src/*.c")
@@ -32,3 +52,8 @@ target_link_libraries(${PROJECT_NAME}
     StaticLibrary
     DynLibrary
 )
+
+
+if(RUN_TESTS EQUAL 1 OR RUN_COVERAGE EQUAL 1)
+    add_subdirectory(test)
+endif ()
