--- a/.github/actions/coverage_and_test/action.yml
+++ b/.github/actions/coverage_and_test/action.yml
@@ -10,10 +10,17 @@ runs:
         PROJECT_PATH=$(pwd)
 
         # ToDo: Add documentation and describe better this command
+        ## ctest es el test-driver de CMake. Corre los tests y reporta resultados.
+        ### --testdir: especifica el directorio en donde estan los tests, generalmente asignado desde el CMakeLists  
+        #### --output-on-failure: output en caso de que falle la prueba.
+        ##### https://cmake.org/cmake/help/latest/manual/ctest.1.html
+
         ctest --test-dir build/tests --output-on-failure
 
         # ToDo: Add documentation and describe better this command
-
+        ## Utilidad que genera reporte resumido de coverage del codigo.
+        ### -r es para especificar el path raiz .
+        #### https://gcovr.com/en/stable/index.html
 
         gcovr -r $PROJECT_PATH . > $PROJECT_PATH/coverage.txt
 
