--- a/.github/actions/documentation/action.yml
+++ b/.github/actions/documentation/action.yml
@@ -11,6 +11,9 @@ runs:
           DOX_CONF_FILE=$(pwd)/Doxyfile
 
           # ToDo: Add documentation about this command and describe better
+          ## cat $DOX_CONF_FILE -> muestra lo el contenido de la variable, es decir del Doxyfile.
+          ### echo "INPUT" = $(pwd)/src $(pwd)/include $(pwd)/lib -> agrega una linea con el path de src, include & lib.
+
           {
               cat $DOX_CONF_FILE
               echo "INPUT" = $(pwd)/src $(pwd)/include $(pwd)/lib
@@ -18,11 +21,18 @@ runs:
 
           # Generate documentation
           # ToDo: Add documentation about this command and describe better
+          ## Doxygen puede usar graphviz (dot -c) para generar diagramas y graficos avanzados.
+          ### https://www.graphviz.org/
+          #### 
+          
           sudo dot -c
 
           ERROR_FILE_FLAG=$(pwd)/dox_errors.txt
 
           # ToDo: Add documentation and describe better this command
+          ## crea el comando de DOXYGEN
+          ### https://www.doxygen.nl/manual/index.html
+
           DOXYGEN_COMMAND=$(doxygen -s $DOX_CONF_FILE) > $ERROR_FILE_FLAG
 
           if [ -s $ERROR_FILE_FLAG ]; then
